TEST_PROGRAMS/INVALID/hardik_vala/extra_semi.min
# Extra semi-colon.

var x: float;;

